# obstacle-avoidance

genetic-algorithm-2D/: .gitignore  CMakeLists.txt  genetic-algorithm-2D.atta
genetic-algorithm-2D/src/: GAComponent.cpp  GAComponent.h  common.h  geneComponent.cpp  geneComponent.h  projectScript.cpp  projectScript.h  robotScript.cpp  robotScript.h
